import HMRC sass base

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -38,4 +38,7 @@
   }
 }
 
+// HMRC assets-frontend stylesheets
+@import 'scss/application';
+
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
